hw2_2024/y.output
   0  $accept : init $end

   1  init : program

   2  program : section program
   3          | section

   4  section : var_decl
   5          | func_decl
   6          | func_def

   7  var_decl : scalar_decl
   8           | array_decl

   9  scalar_decl : type_decl ident

  10  array_decl : type_decl arr_ident ';'

  11  func_decl : type_ident parameter_info ';'

  12  func_def : type_ident parameter_info compound_stmt

  13  stmt : if_else_stmt
  14       | compound_stmt
  15       | expr_stmt
  16       | return_stmt
  17       | break_stmt
  18       | continue_stmt
  19       | while_stmt
  20       | do_while_stmt
  21       | switch_stmt
  22       | for_stmt

  23  while_stmt : while_tag stmt

  24  for_stmt : FOR for_condition stmt

  25  for_condition : '(' for_content ')'

  26  for_content : expr ';' for_layer_2
  27              | ';' for_layer_2

  28  for_layer_2 : expr ';'
  29              | ';'
  30              | expr ';' expr
  31              | ';' expr

  32  do_while_stmt : do_tag while_tag ';'

  33  while_tag : WHILE condition

  34  do_tag : DO stmt

  35  switch_stmt : SWITCH condition switch_clause

  36  switch_clause : '{' switch_content '}'

  37  switch_content : CASE case_expr switch_content
  38                 | DEFALUT default_expr switch_content
  39                 | CASE case_expr
  40                 | DEFALUT default_expr

  41  case_expr : expr ':' stmt
  42            | expr ':'

  43  default_expr : ':' stmt
  44               | ':'

  45  if_else_stmt : if_stmt else_stmt
  46               | if_stmt

  47  if_stmt : IF condition compound_stmt

  48  else_stmt : ELSE compound_stmt

  49  expr_stmt : expr ';'

  50  condition : '(' expr ')'

  51  compound_stmt : '{' compound_stmt_content '}'
  52                | '{' '}'

  53  compound_stmt_content : stmt compound_stmt_content
  54                        | var_decl compound_stmt_content
  55                        | stmt
  56                        | var_decl

  57  break_stmt : BREAK ';'

  58  continue_stmt : CONTINUE ';'

  59  return_stmt : RETURN expr_stmt
  60              | RETURN ';'

  61  parameter_info : '(' parameters ')'
  62                 | '(' ')'

  63  parameters : type_ident ',' parameters
  64             | type_ident

  65  type_ident : type_decl ID

  66  arr_ident : arr_ident_init ',' arr_ident
  67            | arr_ident_init

  68  arr_ident_init : arr_id '=' arr_cnt_fmt
  69                 | arr_id

  70  arr_id : ID arr_tag

  71  arr_tag : box arr_tag
  72          | box

  73  arr_cnt_fmt : '{' arr_content '}'

  74  arr_content : arr_cnt_fmt
  75              | arr_cnt_fmt ',' arr_content
  76              | expr ',' arr_content
  77              | expr

  78  box : '[' expr ']'

  79  type_decl : CONST type_layer
  80            | type_layer
  81            | CONST
  82            | CONST type_layer '*'
  83            | type_layer '*'
  84            | CONST '*'

  85  type_layer : sign_usgn int_char
  86             | sign_usgn
  87             | int_char
  88             | FLOAT
  89             | DOUBLE
  90             | VOID

  91  sign_usgn : SIGN
  92            | USIGN

  93  int_char : long_shrt INT
  94           | long_shrt
  95           | CHAR
  96           | INT

  97  long_shrt : LLONG
  98            | LONG
  99            | SHRT

 100  ident : var_init expr ident_tail
 101        | ID ident_tail

 102  ident_tail : ',' ident
 103             | ';'

 104  var_init : ID '='

 105  expr : expr '+' expr
 106       | expr '-' expr
 107       | expr '*' expr
 108       | expr '/' expr
 109       | expr '%' expr
 110       | expr '<' expr
 111       | expr LESS_OR_EQUAL expr
 112       | expr '>' expr
 113       | expr GREATER_OR_EQUAL expr
 114       | expr IS_EQUAL expr
 115       | expr IS_NOT_EQUAL expr
 116       | expr AND expr
 117       | expr OR expr
 118       | expr '=' expr
 119       | '!' expr
 120       | '~' expr
 121       | expr '^' expr
 122       | expr '&' expr
 123       | expr '|' expr
 124       | expr SHIFT_LEFT expr
 125       | expr SHIFT_RIGHT expr
 126       | '+' expr
 127       | '-' expr
 128       | '&' expr
 129       | '*' expr
 130       | INCREMENT expr
 131       | DECREMENT expr
 132       | expr INCREMENT
 133       | expr DECREMENT
 134       | factor
 135       | expr arglist
 136       | type_casting expr

 137  type_casting : '(' type_decl ')'

 138  factor : INT_NUM
 139         | FLOAT_NUM
 140         | STRING
 141         | CHARACTER
 142         | NULL_SIGNAL
 143         | arr_id
 144         | ID
 145         | '(' expr ')'

 146  arglist : '(' args ')'

 147  args : expr ',' args
 148       | expr

state 0
	$accept : . init $end  (0)

	CONST  shift 1
	SIGN  shift 2
	USIGN  shift 3
	LONG  shift 4
	LLONG  shift 5
	SHRT  shift 6
	FLOAT  shift 7
	DOUBLE  shift 8
	VOID  shift 9
	CHAR  shift 10
	INT  shift 11
	.  error

	init  goto 12
	type_decl  goto 13
	type_layer  goto 14
	sign_usgn  goto 15
	int_char  goto 16
	long_shrt  goto 17
	scalar_decl  goto 18
	func_decl  goto 19
	program  goto 20
	array_decl  goto 21
	func_def  goto 22
	var_decl  goto 23
	type_ident  goto 24
	section  goto 25


state 1
	type_decl : CONST . type_layer  (79)
	type_decl : CONST .  (81)
	type_decl : CONST . type_layer '*'  (82)
	type_decl : CONST . '*'  (84)

	SIGN  shift 2
	USIGN  shift 3
	LONG  shift 4
	LLONG  shift 5
	SHRT  shift 6
	FLOAT  shift 7
	DOUBLE  shift 8
	VOID  shift 9
	CHAR  shift 10
	INT  shift 11
	'*'  shift 26
	ID  reduce 81
	')'  reduce 81

	type_layer  goto 27
	sign_usgn  goto 15
	int_char  goto 16
	long_shrt  goto 17


state 2
	sign_usgn : SIGN .  (91)

	.  reduce 91


state 3
	sign_usgn : USIGN .  (92)

	.  reduce 92


state 4
	long_shrt : LONG .  (98)

	.  reduce 98


state 5
	long_shrt : LLONG .  (97)

	.  reduce 97


state 6
	long_shrt : SHRT .  (99)

	.  reduce 99


state 7
	type_layer : FLOAT .  (88)

	.  reduce 88


state 8
	type_layer : DOUBLE .  (89)

	.  reduce 89


state 9
	type_layer : VOID .  (90)

	.  reduce 90


state 10
	int_char : CHAR .  (95)

	.  reduce 95


state 11
	int_char : INT .  (96)

	.  reduce 96


state 12
	$accept : init . $end  (0)

	$end  accept


state 13
	scalar_decl : type_decl . ident  (9)
	array_decl : type_decl . arr_ident ';'  (10)
	type_ident : type_decl . ID  (65)

	ID  shift 28
	.  error

	ident  goto 29
	var_init  goto 30
	arr_ident  goto 31
	arr_id  goto 32
	arr_ident_init  goto 33


state 14
	type_decl : type_layer .  (80)
	type_decl : type_layer . '*'  (83)

	'*'  shift 34
	ID  reduce 80
	')'  reduce 80


state 15
	type_layer : sign_usgn . int_char  (85)
	type_layer : sign_usgn .  (86)

	LONG  shift 4
	LLONG  shift 5
	SHRT  shift 6
	CHAR  shift 10
	INT  shift 11
	ID  reduce 86
	'*'  reduce 86
	')'  reduce 86

	int_char  goto 35
	long_shrt  goto 17


state 16
	type_layer : int_char .  (87)

	.  reduce 87


state 17
	int_char : long_shrt . INT  (93)
	int_char : long_shrt .  (94)

	INT  shift 36
	ID  reduce 94
	'*'  reduce 94
	')'  reduce 94


state 18
	var_decl : scalar_decl .  (7)

	.  reduce 7


state 19
	section : func_decl .  (5)

	.  reduce 5


state 20
	init : program .  (1)

	.  reduce 1


state 21
	var_decl : array_decl .  (8)

	.  reduce 8


state 22
	section : func_def .  (6)

	.  reduce 6


state 23
	section : var_decl .  (4)

	.  reduce 4


state 24
	func_decl : type_ident . parameter_info ';'  (11)
	func_def : type_ident . parameter_info compound_stmt  (12)

	'('  shift 37
	.  error

	parameter_info  goto 38


state 25
	program : section . program  (2)
	program : section .  (3)

	CONST  shift 1
	SIGN  shift 2
	USIGN  shift 3
	LONG  shift 4
	LLONG  shift 5
	SHRT  shift 6
	FLOAT  shift 7
	DOUBLE  shift 8
	VOID  shift 9
	CHAR  shift 10
	INT  shift 11
	$end  reduce 3

	type_decl  goto 13
	type_layer  goto 14
	sign_usgn  goto 15
	int_char  goto 16
	long_shrt  goto 17
	scalar_decl  goto 18
	func_decl  goto 19
	program  goto 39
	array_decl  goto 21
	func_def  goto 22
	var_decl  goto 23
	type_ident  goto 24
	section  goto 25


state 26
	type_decl : CONST '*' .  (84)

	.  reduce 84


state 27
	type_decl : CONST type_layer .  (79)
	type_decl : CONST type_layer . '*'  (82)

	'*'  shift 40
	ID  reduce 79
	')'  reduce 79


state 28
	type_ident : type_decl ID .  (65)
	arr_id : ID . arr_tag  (70)
	ident : ID . ident_tail  (101)
	var_init : ID . '='  (104)

	';'  shift 41
	','  shift 42
	'='  shift 43
	'['  shift 44
	'('  reduce 65

	ident_tail  goto 45
	arr_tag  goto 46
	box  goto 47


state 29
	scalar_decl : type_decl ident .  (9)

	.  reduce 9


state 30
	ident : var_init . expr ident_tail  (100)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	type_casting  goto 64
	expr  goto 65
	arr_id  goto 66


state 31
	array_decl : type_decl arr_ident . ';'  (10)

	';'  shift 67
	.  error


state 32
	arr_ident_init : arr_id . '=' arr_cnt_fmt  (68)
	arr_ident_init : arr_id .  (69)

	'='  shift 68
	';'  reduce 69
	','  reduce 69


state 33
	arr_ident : arr_ident_init . ',' arr_ident  (66)
	arr_ident : arr_ident_init .  (67)

	','  shift 69
	';'  reduce 67


state 34
	type_decl : type_layer '*' .  (83)

	.  reduce 83


state 35
	type_layer : sign_usgn int_char .  (85)

	.  reduce 85


state 36
	int_char : long_shrt INT .  (93)

	.  reduce 93


state 37
	parameter_info : '(' . parameters ')'  (61)
	parameter_info : '(' . ')'  (62)

	CONST  shift 1
	SIGN  shift 2
	USIGN  shift 3
	LONG  shift 4
	LLONG  shift 5
	SHRT  shift 6
	FLOAT  shift 7
	DOUBLE  shift 8
	VOID  shift 9
	CHAR  shift 10
	INT  shift 11
	')'  shift 70
	.  error

	type_decl  goto 71
	type_layer  goto 14
	sign_usgn  goto 15
	int_char  goto 16
	long_shrt  goto 17
	type_ident  goto 72
	parameters  goto 73


state 38
	func_decl : type_ident parameter_info . ';'  (11)
	func_def : type_ident parameter_info . compound_stmt  (12)

	'{'  shift 74
	';'  shift 75
	.  error

	compound_stmt  goto 76


state 39
	program : section program .  (2)

	.  reduce 2


state 40
	type_decl : CONST type_layer '*' .  (82)

	.  reduce 82


state 41
	ident_tail : ';' .  (103)

	.  reduce 103


state 42
	ident_tail : ',' . ident  (102)

	ID  shift 77
	.  error

	ident  goto 78
	var_init  goto 30


state 43
	var_init : ID '=' .  (104)

	.  reduce 104


state 44
	box : '[' . expr ']'  (78)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	type_casting  goto 64
	expr  goto 79
	arr_id  goto 66


state 45
	ident : ID ident_tail .  (101)

	.  reduce 101


state 46
	arr_id : ID arr_tag .  (70)

	.  reduce 70


state 47
	arr_tag : box . arr_tag  (71)
	arr_tag : box .  (72)

	'['  shift 44
	'}'  reduce 72
	':'  reduce 72
	';'  reduce 72
	','  reduce 72
	'='  reduce 72
	OR  reduce 72
	AND  reduce 72
	'|'  reduce 72
	'^'  reduce 72
	'&'  reduce 72
	IS_EQUAL  reduce 72
	IS_NOT_EQUAL  reduce 72
	'<'  reduce 72
	'>'  reduce 72
	LESS_OR_EQUAL  reduce 72
	GREATER_OR_EQUAL  reduce 72
	SHIFT_LEFT  reduce 72
	SHIFT_RIGHT  reduce 72
	'+'  reduce 72
	'-'  reduce 72
	'*'  reduce 72
	'/'  reduce 72
	'%'  reduce 72
	INCREMENT  reduce 72
	DECREMENT  reduce 72
	']'  reduce 72
	'('  reduce 72
	')'  reduce 72

	arr_tag  goto 80
	box  goto 47


state 48
	factor : INT_NUM .  (138)

	.  reduce 138


state 49
	factor : FLOAT_NUM .  (139)

	.  reduce 139


state 50
	factor : STRING .  (140)

	.  reduce 140


state 51
	factor : CHARACTER .  (141)

	.  reduce 141


state 52
	factor : NULL_SIGNAL .  (142)

	.  reduce 142


state 53
	arr_id : ID . arr_tag  (70)
	factor : ID .  (144)

	'['  shift 44
	'}'  reduce 144
	':'  reduce 144
	';'  reduce 144
	','  reduce 144
	'='  reduce 144
	OR  reduce 144
	AND  reduce 144
	'|'  reduce 144
	'^'  reduce 144
	'&'  reduce 144
	IS_EQUAL  reduce 144
	IS_NOT_EQUAL  reduce 144
	'<'  reduce 144
	'>'  reduce 144
	LESS_OR_EQUAL  reduce 144
	GREATER_OR_EQUAL  reduce 144
	SHIFT_LEFT  reduce 144
	SHIFT_RIGHT  reduce 144
	'+'  reduce 144
	'-'  reduce 144
	'*'  reduce 144
	'/'  reduce 144
	'%'  reduce 144
	INCREMENT  reduce 144
	DECREMENT  reduce 144
	']'  reduce 144
	'('  reduce 144
	')'  reduce 144

	arr_tag  goto 46
	box  goto 47


state 54
	expr : '&' . expr  (128)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	type_casting  goto 64
	expr  goto 81
	arr_id  goto 66


state 55
	expr : '+' . expr  (126)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	type_casting  goto 64
	expr  goto 82
	arr_id  goto 66


state 56
	expr : '-' . expr  (127)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	type_casting  goto 64
	expr  goto 83
	arr_id  goto 66


state 57
	expr : '*' . expr  (129)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	type_casting  goto 64
	expr  goto 84
	arr_id  goto 66


state 58
	expr : INCREMENT . expr  (130)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	type_casting  goto 64
	expr  goto 85
	arr_id  goto 66


state 59
	expr : DECREMENT . expr  (131)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	type_casting  goto 64
	expr  goto 86
	arr_id  goto 66


state 60
	expr : '!' . expr  (119)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	type_casting  goto 64
	expr  goto 87
	arr_id  goto 66


state 61
	expr : '~' . expr  (120)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	type_casting  goto 64
	expr  goto 88
	arr_id  goto 66


state 62
	type_casting : '(' . type_decl ')'  (137)
	factor : '(' . expr ')'  (145)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	CONST  shift 1
	SIGN  shift 2
	USIGN  shift 3
	LONG  shift 4
	LLONG  shift 5
	SHRT  shift 6
	FLOAT  shift 7
	DOUBLE  shift 8
	VOID  shift 9
	CHAR  shift 10
	INT  shift 11
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	type_decl  goto 89
	type_layer  goto 14
	sign_usgn  goto 15
	int_char  goto 16
	long_shrt  goto 17
	factor  goto 63
	type_casting  goto 64
	expr  goto 90
	arr_id  goto 66


state 63
	expr : factor .  (134)

	.  reduce 134


state 64
	expr : type_casting . expr  (136)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	type_casting  goto 64
	expr  goto 91
	arr_id  goto 66


state 65
	ident : var_init expr . ident_tail  (100)
	expr : expr . '+' expr  (105)
	expr : expr . '-' expr  (106)
	expr : expr . '*' expr  (107)
	expr : expr . '/' expr  (108)
	expr : expr . '%' expr  (109)
	expr : expr . '<' expr  (110)
	expr : expr . LESS_OR_EQUAL expr  (111)
	expr : expr . '>' expr  (112)
	expr : expr . GREATER_OR_EQUAL expr  (113)
	expr : expr . IS_EQUAL expr  (114)
	expr : expr . IS_NOT_EQUAL expr  (115)
	expr : expr . AND expr  (116)
	expr : expr . OR expr  (117)
	expr : expr . '=' expr  (118)
	expr : expr . '^' expr  (121)
	expr : expr . '&' expr  (122)
	expr : expr . '|' expr  (123)
	expr : expr . SHIFT_LEFT expr  (124)
	expr : expr . SHIFT_RIGHT expr  (125)
	expr : expr . INCREMENT  (132)
	expr : expr . DECREMENT  (133)
	expr : expr . arglist  (135)

	';'  shift 41
	','  shift 42
	'='  shift 92
	OR  shift 93
	AND  shift 94
	'|'  shift 95
	'^'  shift 96
	'&'  shift 97
	IS_EQUAL  shift 98
	IS_NOT_EQUAL  shift 99
	'<'  shift 100
	'>'  shift 101
	LESS_OR_EQUAL  shift 102
	GREATER_OR_EQUAL  shift 103
	SHIFT_LEFT  shift 104
	SHIFT_RIGHT  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	INCREMENT  shift 111
	DECREMENT  shift 112
	'('  shift 113
	.  error

	ident_tail  goto 114
	arglist  goto 115


state 66
	factor : arr_id .  (143)

	.  reduce 143


state 67
	array_decl : type_decl arr_ident ';' .  (10)

	.  reduce 10


state 68
	arr_ident_init : arr_id '=' . arr_cnt_fmt  (68)

	'{'  shift 116
	.  error

	arr_cnt_fmt  goto 117


state 69
	arr_ident : arr_ident_init ',' . arr_ident  (66)

	ID  shift 118
	.  error

	arr_ident  goto 119
	arr_id  goto 32
	arr_ident_init  goto 33


state 70
	parameter_info : '(' ')' .  (62)

	.  reduce 62


state 71
	type_ident : type_decl . ID  (65)

	ID  shift 120
	.  error


state 72
	parameters : type_ident . ',' parameters  (63)
	parameters : type_ident .  (64)

	','  shift 121
	')'  reduce 64


state 73
	parameter_info : '(' parameters . ')'  (61)

	')'  shift 122
	.  error


state 74
	compound_stmt : '{' . compound_stmt_content '}'  (51)
	compound_stmt : '{' . '}'  (52)

	INT_NUM  shift 48
	FLOAT_NUM  shift 49
	STRING  shift 50
	CHARACTER  shift 51
	NULL_SIGNAL  shift 52
	ID  shift 53
	CONST  shift 1
	SIGN  shift 2
	USIGN  shift 3
	LONG  shift 4
	LLONG  shift 5
	SHRT  shift 6
	FLOAT  shift 7
	DOUBLE  shift 8
	VOID  shift 9
	CHAR  shift 10
	INT  shift 11
	FOR  shift 123
	DO  shift 124
	WHILE  shift 125
	BREAK  shift 126
	CONTINUE  shift 127
	IF  shift 128
	RETURN  shift 129
	SWITCH  shift 130
	'{'  shift 74
	'}'  shift 131
	'&'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	INCREMENT  shift 58
	DECREMENT  shift 59
	'!'  shift 60
	'~'  shift 61
	'('  shift 62
	.  error

	type_decl  goto 132
	type_layer  goto 14
	sign_usgn  goto 15
	int_char  goto 16
	long_shrt  goto 17
	while_stmt  goto 133
	do_while_stmt  goto 134
	while_tag  goto 135
	do_tag  goto 136
	switch_stmt  goto 137
	factor  goto 63
	if_else_stmt  goto 138
	break_stmt  goto 139
	scalar_decl  goto 18
	array_decl  goto 21
	var_decl  goto 140
	type_casting  goto 64
	expr_stmt  goto 141
	compound_stmt_content  goto 142
	stmt  goto 143
	if_stmt  goto 144
	for_stmt  goto 145
	expr  goto 146
	arr_id  goto 66
	compound_stmt  goto 147
	continue_stmt  goto 148
	return_stmt  goto 149


state 75
	func_decl : type_ident parameter_info ';' .  (11)

	.  reduce 11


state 76
	func_def : type_ident parameter_info compound_stmt .  (12)

	.  reduce 12


state 77
	ident : ID . ident_tail  (101)
	var_init : ID . '='  (104)

	';'  shift 41
	','  shift 42
	'='  shift 43
	.  error

	ident_tail  goto 45


state 78
	ident_tail : ',' ident .  (102)

	.  reduce 102


state 79
	box : '[' expr . ']'  (78)
	expr : expr . '+' expr  (105)
	expr : expr . '-' expr  (106)
	expr : expr . '*' expr  (107)
	expr : expr . '/' expr  (108)
	expr : expr . '%' expr  (109)
	expr : expr . '<' expr  (110)
	expr : expr . LESS_OR_EQUAL expr  (111)
	expr : expr . '>' expr  (112)
	expr : expr . GREATER_OR_EQUAL expr  (113)
	expr : expr . IS_EQUAL expr  (114)
	expr : expr . IS_NOT_EQUAL expr  (115)
	expr : expr . AND expr  (116)
	expr : expr . OR expr  (117)
	expr : expr . '=' expr  (118)
	expr : expr . '^' expr  (121)
	expr : expr . '&' expr  (122)
	expr : expr . '|' expr  (123)
	expr : expr . SHIFT_LEFT expr  (124)
	expr : expr . SHIFT_RIGHT expr  (125)
	expr : expr . INCREMENT  (132)
	expr : expr . DECREMENT  (133)
	expr : expr . arglist  (135)

	'='  shift 92
	OR  shift 93
	AND  shift 94
	'|'  shift 95
	'^'  shift 96
	'&'  shift 97
	IS_EQUAL  shift 98
	IS_NOT_EQUAL  shift 99
	'<'  shift 100
	'>'  shift 101
	LESS_OR_EQUAL  shift 102
	GREATER_OR_EQUAL  shift 103
	SHIFT_LEFT  shift 104
	SHIFT_RIGHT  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	INCREMENT  shift 111
	DECREMENT  shift 112
	']'  shift 150
	'('  shift 113
	.  error

	arglist  goto 115


state 80
	arr_tag : box arr_tag .  (71)

	.  reduce 71


state 81
	expr : expr . '+' expr  (105)
	expr : expr . '-' expr  (106)
	expr : expr . '*' expr  (107)
	expr : expr . '/' expr  (108)
	expr : expr . '%' expr  (109)
	expr : expr . '<' expr  (110)
	expr : expr . LESS_OR_EQUAL expr  (111)
	expr : expr . '>' expr  (112)
	expr : expr . GREATER_OR_EQUAL expr  (113)
	expr : expr . IS_EQUAL expr  (114)
	expr : expr . IS_NOT_EQUAL expr  (115)
	expr : expr . AND expr  (116)
	expr : expr . OR expr  (117)
	expr : expr . '=' expr  (118)
	expr : expr . '^' expr  (121)
	expr : expr . '&' expr  (122)
	expr : expr . '|' expr  (123)
	expr : expr . SHIFT_LEFT expr  (124)
	expr : expr . SHIFT_RIGHT expr  (125)
	expr : '&' expr .  (128)
	expr : expr . INCREMENT  (132)
	expr : expr . DECREMENT  (133)
	expr : expr . arglist  (135)

	'('  shift 113
	'}'  reduce 128
	':'  reduce 128
	';'  reduce 128
	','  reduce 128
	'='  reduce 128
	OR  reduce 128
	AND  reduce 128
	'|'  reduce 128
	'^'  reduce 128
	'&'  reduce 128
	IS_EQUAL  reduce 128
	IS_NOT_EQUAL  reduce 128
	'<'  reduce 128
	'>'  reduce 128
	LESS_OR_EQUAL  reduce 128
	GREATER_OR_EQUAL  reduce 128
	SHIFT_LEFT  reduce 128
	SHIFT_RIGHT  reduce 128
	'+'  reduce 128
	'-'  reduce 128
	'*'  reduce 128
	'/'  reduce 128
	'%'  reduce 128
	INCREMENT  reduce 128
	DECREMENT  reduce 128
	']'  reduce 128
	')'  reduce 128

	arglist  goto 115


state 82
	expr : expr . '+' expr  (105)
	expr : expr . '-' expr  (106)
	expr : expr . '*' expr  (107)
	expr : expr . '/' expr  (108)
	expr : expr . '%' expr  (109)
	expr : expr . '<' expr  (110)
	expr : expr . LESS_OR_EQUAL expr  (111)
	expr : expr . '>' expr  (112)
	expr : expr . GREATER_OR_EQUAL expr  (113)
	expr : expr . IS_EQUAL expr  (114)
	expr : expr . IS_NOT_EQUAL expr  (115)
	expr : expr . AND expr  (116)
	expr : expr . OR expr  (117)
	expr : expr . '=' expr  (118)
	expr : expr . '^' expr  (121)
	expr : expr . '&' expr  (122)
	expr : expr . '|' expr  (123)
	expr : expr . SHIFT_LEFT expr  (124)
	expr : expr . SHIFT_RIGHT expr  (125)
	expr : '+' expr .  (126)
	expr : expr . INCREMENT  (132)
	expr : expr . DECREMENT  (133)
	expr : expr . arglist  (135)

	'('  shift 113
	'}'  reduce 126
	':'  reduce 126
	';'  reduce 126
	','  reduce 126
	'='  reduce 126
	OR  reduce 126
	AND  reduce 126
	'|'  reduce 126
	'^'  reduce 126
	'&'  reduce 126
	IS_EQUAL  reduce 126
	IS_NOT_EQUAL  reduce 126
	'<'  reduce 126
	'>'  reduce 126
	LESS_OR_EQUAL  reduce 126
	GREATER_OR_EQUAL  reduce 126
	SHIFT_LEFT  reduce 126
	SHIFT_RIGHT  reduce 126
	'+'  reduce 126
	'-'  reduce 126
	'*'  reduce 126
	'/'  reduce 126
	'%'  reduce 126
	INCREMENT  reduce 126
	DECREMENT  reduce 126
	']'  reduce 126
	')'  reduce 126

	arglist  goto 115


state 83
	expr : expr . '+' expr  (105)
	expr : expr . '-' expr  (106)
	expr : expr . '*' expr  (107)
	expr : expr . '/' expr  (108)
	expr : expr . '%' expr  (109)
	expr : expr . '<' expr  (110)
	expr : expr . LESS_OR_EQUAL expr  (111)
	expr : expr . '>' expr  (112)
	expr : expr . GREATER_OR_EQUAL expr  (113)
	expr : expr . IS_EQUAL expr  (114)
	expr : expr . IS_NOT_EQUAL expr  (115)
	expr : expr . AND expr  (116)
	expr : expr . OR expr  (117)
	expr : expr . '=' expr  (118)
	expr : expr . '^' expr  (121)
	expr : expr . '&' expr  (122)
	expr : expr . '|' expr  (123)
	expr : expr . SHIFT_LEFT expr  (124)
	expr : expr . SHIFT_RIGHT expr  (125)
	expr : '-' expr .  (127)
	expr : expr . INCREMENT  (132)
	expr : expr . DECREMENT  (133)
	expr : expr . arglist  (135)
